--- a/index.html
+++ b/index.html
@@ -1,1 +1,127 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    
+<meta charset="UTF-8">    
+<title>Class 10 Rubric for DT</title>
+
+<link rel="stylesheet" href="Stylemaster.css" >
+
+</head>
+<body>
+    <h1> Class 10 Rubric 2024</h1>
+<!--
+    <iframe width="700" height="900" frameborder="0" scrolling="no" src="https://michaelparkschoolnz-my.sharepoint.com/:x:/g/personal/camerona_michaelpark_school_nz/EfUDH76TPvZNt4phWVmnUcoBuVF8OR8Md_ehj4dgsx-OTA?e=DdFBQN"></iframe>
+-->
+<table>
+    <tr>
+        <td><b>Coding Validation</b></td>
+        <td><b>Excellence</b></td>
+        <td><b>Merit</b></td>
+        <td><b>Achieved</b></td>
+        <td><b>N/A</b></td>
+    </tr>
+    <tr>
+        <td>25%</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td></td>
+        <td>There are no errors in the HTML, CSS or other coding on the site as found by me or an online validator.</td>
+        <td>There are 1-3 coding errors on the site as found by me or an online validator.</td>
+        <td>There are 4-5 coding errors on the site as found by me or an online validator.</td>
+        <td>There are more than 6 coding errors on the site as found by me or an online validator.</td>
+    </tr>
+    <tr>
+        <td><b>Layout/Design</b></td>
+        <td><b>Excellence</b></td>
+        <td><b>Merit</b></td>
+        <td><b>Achieved</b></td>
+        <td><b>N/A</b></td>
+    </tr>
+    <tr>
+        <td>25%</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td></td>
+        <td>The web site has an exceptionally attractive and usable layout. It is easy to locate all important information. White space, graphic elements and/or alignment are used effectively to organize material.</td>
+        <td>The web site has an attractive and usable layout. It is easy to locate all important information.</td>
+        <td>The web site has a usable layout, but may appear busy or boring. It is easy to locate most of the important information.</td>
+        <td>The web site has a cluttered look and is confusing. It is often difficult to locate important information.</td>
+    </tr>
+    <tr>
+        <td><b>Cascading Style Sheet</b></td>
+        <td><b>Excellence</b></td>
+        <td><b>Merit</b></td>
+        <td><b>Achieved</b></td>
+        <td><b>N/A</b></td>
+    </tr>
+    <tr>
+        <td>20%</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td></td>
+        <td>Student uses a style sheet to define attributes (along with some inline style), which makes all pages attractive looking and consistent.</td>
+        <td>Student uses a style sheet, however there is some inconsistencies in relation to the styles on each page in the web site.</td>
+        <td>Student uses a style sheet, however, it is not consistent on all pages, which disrupts consistency of pages within the web site.</td>
+        <td>Student fails to use a style sheet within the pages of the web site.</td>
+    </tr>
+    <tr>
+        <td><b>Navigation</b></td>
+        <td><b>Excellence</b></td>
+        <td><b>Merit</b></td>
+        <td><b>Achieved</b></td>
+        <td><b>N/A</b></td>
+    </tr>
+    <tr>
+        <td>15%</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td></td>
+        <td>Links for navigation are clearly labeled, consistently placed, allow the reader to easily move from a page to related pages and take reader where he expects to go. A user does not become lost.</td>
+        <td>Links for navigation are clearly labeled, allow the reader to easily move from page to page and internal links take the reader where he expects to go. A user rarely becomes lost.</td>
+        <td>Links for navigation ake the reader where expected, but some needed links seem to be missing. A user sometimes gets lost.</td>
+        <td>Some links do not take the reader to the sites/pages described. A user typically feels lost.</td>
+    </tr>
+    <tr>
+        <td><b>Graphics</b></td>
+        <td><b>Excellence</b></td>
+        <td><b>Merit</b></td>
+        <td><b>Achieved</b></td>
+        <td><b>N/A</b></td>
+    </tr>
+    <tr>
+        <td>15%</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td></td>
+        <td>Graphics are related to the theme or purpose of the site, are of high quality and enhance reader interest or understanding.</td>
+        <td>Graphics are related to the theme or purpose of the site, are of good quality and enhance reader interest or understanding.</td>
+        <td>Graphics are of fair design, unoriginal, with elements that need enhancing such as red eye, etc.</td>
+        <td>Graphics are poor design, unoriginal or borrowed work that need major enhancements such as red eye, improved cropping, etc.</td>
+    </tr>
+</table>
+    
+</body>
+</html>
+
