--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta charset="UTF-8">    
 <title>Class 10 Rubric for DT</title>
 
-<link rel="stylesheet" href="Stylemaster.css" >
+<link rel="stylesheet" href="style2.css" >
 
 </head>
 <body>
