--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
    
     <div class="topnav">
-<a href="https://skuxdlx.github.io/skuxrubric/">skux rubric</a>
+<a href="https://skuxdlx.github.io/edwinnsphinxcat/">back to home</a>
 <a href="https://skuxdlx.github.io/clothingstyle/">skux clothes</a>
 <a href="https://skuxdlx.github.io/skuxlifestyle/">skux lifestyle</a>
   <a href="https://skuxdlx.github.io/skuxvehicles/">skux vehicles</a>
