--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <a href="https://skuxdlx.github.io/skuxvehicles/">skux vehicles</a>
     <a href="https://skuxdlx.github.io/skuxphrases/">skux phrases</a>
     <a href="https://skuxdlx.github.io/skuxactivities/">skux activities</a>
+            <a href="https://skuxdlx.github.io/skuxpeople/"> skux persons</a>
  
 </div>
     
